--- a/recipes/mapsplice/meta.yaml
+++ b/recipes/mapsplice/meta.yaml
@@ -1,18 +1,21 @@
+{% set name = "mapsplice" %}
+{% set version = "2.2.1" %}
+{% set sha256hash = "4f3c1cb49ba0abcfc952de5946ee0b56db28c51f4f4d4f5abca66b4461ca7d05" %}
+
 package:
-  name: mapsplice
-  version: 2.2.0
+  name: {{ name|lower }}
+  version: {{ version }}
 
 source:
-  fn: MapSplice-v2.2.0.zip
-  url: http://protocols.netlab.uky.edu/~zeng/MapSplice-v2.2.0.zip
-  md5: 171975d48d2ddcc111a314d926f3527a
-
+  fn: MapSplice-v{{ version }}.zip
+  url: http://protocols.netlab.uky.edu/~zeng/MapSplice-v{{ version }}.zip
+  sha256: {{ sha256hash }}
   patches:
     - mapsplice.patch
     - samtools.patch
 
 build:
-  number: 1
+  number: 0
   skip: True # [osx]
   string: "py{{CONDA_PY}}_ncurses{{CONDA_NCURSES}}_{{PKG_BUILDNUM}}"
 
@@ -28,11 +31,11 @@ requirements:
     - ncurses {{CONDA_NCURSES}}*
 
 test:
-
- commands:
-   - mapsplice.py -v 2>&1 |grep MapSplice > /dev/null
+  commands:
+   - mapsplice.py -v 2>&1 | grep MapSplice > /dev/null
 
 about:
+  home: http://www.netlab.uky.edu/p/bioinfo/MapSplice2
   license: Custom
   summary: MapSplice is a software for mapping RNA-seq data to reference genome for splice junction discovery that depends only on reference genome, and not on any further annotations.
   license_file: Copyright.txt
