--- a/recipes/biom-format/meta.yaml
+++ b/recipes/biom-format/meta.yaml
@@ -48,7 +48,7 @@ test:
 
   commands:
     # click requires a unicode locale
-    - LANG=en_US.UTF-8 biom --help
+    - LC_ALL=en_US.UTF-8 LANG=en_US.UTF-8 biom --help
 
 about:
   home: http://www.biom-format.org
